fixed visibility of the forms and button functions

--- a/style.scss
+++ b/style.scss
@@ -30,15 +30,9 @@ body {
   overflow: hidden;
   justify-content: center;
   align-items: center;
-  width: 1500px;
-  height: 500px;
+  width: 1900px;
+  height: 700px;
   transition: transform 0.5s ease;
-  .slide { 
-    transition: transform 0.8s ease-in-out;
-    transform: translateX(-100%);
-    overflow: hidden;
-
-  }
   span { // the star effect listed below - 10 stars
     position: fixed;
     top: -120px;
@@ -126,22 +120,17 @@ body {
   }
 }
 
-.login-container{ // Unresolved issue- to be fixed - the transform translate is clipping incorrectly into the other form
+.login-container{ 
   position: relative;
   font-size: 1.40rem;
   width: 500px;
-  height: 25rem;
+  height: 27rem;
   background: transparent;
   border: 0.1rem solid #9663c9;
   border-radius: 0.5rem;
   padding: 1rem 2rem;
   transition: transform 1.3s ease-in-out;
-  transform: translateX(50%);
-  .slide {
-    transition: transform 0.8s ease-in-out;
-    transform: translateX(200px);
 
-  }
 
   .btn-media-login{ //transition
     border-radius: 40%;
@@ -199,24 +188,17 @@ body {
 }
 
 
-.register-container { // unresolved clipping issue - to be fixed
+.register-container { // patched visibility
   overflow: hidden;
   width: 500px;
-  height: 30rem;
+  height: 33rem;
   font-size: 1.40rem;
   background: transparent;
   border: 0.1rem solid #9663c9;
   border-radius: 0.5rem;
   padding: 1rem 2rem;
   transition: transform 1.3s ease-in-out;
-  transform: translateX(50%);
   cursor: pointer;
-  .slide {
-    transition: transform 0.8s ease-in-out;
-    transform: translateX(0);
-    opacity: 1;
-
-  }
   h1 {
     font-family: 'Lato', cursive;
     text-align: center;
@@ -375,4 +357,8 @@ body {
     }
   }
   
+}
+
+.hidden {
+  display: none;
 }
